# semantic-search-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  environment.py  gunicorn.conf.py  install.sh  install2.sh  last_fetch_time  manage_db.sh  mm_oauth.py  pyproject.toml  requirements.txt  runtest.sh  server.py  store
src/: chroma.py  constants.py  crud.py  llm.py  mattermost.py  semantic_search.py  server.py
src/LLM/: llama.py  methods.py
src/database/: chroma.py  crud.py
src/database/slack/: extract_data.py  pull_from_repo.py  slack.py
src/embedding/: embedding.py  generate_embeddings.py
src/llm/: llama.py  prompt.py  semantic_search.py  together_llm.py
src/routes/: __init__.py  login_decorator.py  root_route.py  search_route.py  settings_route.py  slack_route.py  sync_route.py
src/semantic-search-engine/database/: crud.py
src/semantic-search-engine/utils/: app_init.py
src/semantic_search_engine/: chroma.py  constants.py  crud.py  db.py  llm.py  mattermost.py  semantic_search.py  shelves.py  slack.py
src/semantic_search_engine/embedding/: generate_embeddings.py
src/semantic_search_engine/llm/: llama.py  prompt.py
src/semantic_search_engine/mattermost/: __init__.py  fetch_mm_data.py  fetch_mm_data_details.py  mattermost.py  mm_api.py  mm_details.py  mm_scheduler.py  sync_posts.py
src/semantic_search_engine/oauth/: __init__.py  mm_oauth.py
src/semantic_search_engine/slack/: __init__.py  (+3 more)
src/util/: config.py  extract_channel_metadata.py  format_prompt.py  get_channels.py  git_clone.py
src/utils/: app_init.py
tests/: test_chroma.py  test_db.py  test_semantic_search.py  test_slack.py
(+10 files in other folders)
